Fix day and hour div overflow behavior
also add hour temp population

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,6 @@ h1, h2, h3, p, label, input, textarea, button {
     grid-template-rows: 3fr 7fr;
     color: white;
     height: 100vh;
-    overflow-x: hidden;
     background-color: #272727;
 }
 
@@ -60,18 +59,23 @@ h1, h2, h3, p, label, input, textarea, button {
     grid-row: 2 / 3;
     height: 100%;
     width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 0;
 }
 
 .data-container {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
     display: flex;
     box-sizing: border-box;
     padding: 1rem;
     height: 100%;
-    width: 100%;
+    max-width: 100%;
     border-radius: 0.5rem;
+    min-width: 0;
 }
 
 /* Left Data */
@@ -129,7 +133,8 @@ h1, h2, h3, p, label, input, textarea, button {
 .data-right {
     box-sizing: border-box;
     padding: 1rem;
-    width: 100%;
+    flex: 1;
+    min-width: 0;
     max-width: 100%;
     height: 100%;
     display: flex;
@@ -138,10 +143,11 @@ h1, h2, h3, p, label, input, textarea, button {
 }
 
 .forecast-hours {
+    box-sizing: border-box;
+    /* padding-right: 2.75rem; */
     display: flex;
     gap: 0.5rem;
     width: 100%;
-    max-width: 100%;
     overflow-x: scroll;
     height: 25%;
     scrollbar-width: none; /* Firefox */
@@ -173,19 +179,28 @@ h1, h2, h3, p, label, input, textarea, button {
 }
 
 .forecast-week {
+    box-sizing: border-box;
     height: 75%;
     width: 100%;
     display: flex;
     gap: 0.5rem;
     overflow-x: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE 10+ */
+}
+
+.forecast-week::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Edge */
 }
 
 .forecast-day {
     background-color: #2d2d2d;
     width: calc((100% - 3rem) / 7);
+    min-width: 6rem;
     height: 100%;
     border-radius: 0.5rem;
     flex-shrink: 0;
+
 }
 
 .unit-button {
